# such_shared_memory

./: .gitignore  CMakeLists.txt
app/test_such_shared_memory/: test_such_shared_memory.c
include/such_shared_memory/: such_shared_memory.h
lib/such_shared_memory/: such_shared_memory.c
